--- a/pages/index.html
+++ b/pages/index.html
@@ -97,7 +97,12 @@
                 id="menu-toggle"
                 class="mega-header__menu-trigger"
               >
-                <img src="/images/btn.svg" alt="menu" />
+              <svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 41 41" fill="none">
+                <rect width="40" height="40" transform="translate(0.390625 0.160004)" fill="#C6D3E3"/>
+                <rect x="8.89062" y="19.66" width="23" height="1" stroke="#273272"/>
+                <rect x="8.89062" y="28.66" width="23" height="1" stroke="#273272"/>
+                <rect x="8.89062" y="10.66" width="23" height="1" stroke="#273272"/>
+              </svg>
               </button>
               <nav
                 id="header-overlay"
@@ -118,7 +123,21 @@
                       <form action="" class="header-overlay__panel-search">
                         <input type="text" placeholder="Search" />
                         <button type="submit">
-                          <img src="/images/search.svg" alt="search" />
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                          >
+                            <path
+                              d="M19.25 19.25L15.5 15.5M4.75 11C4.75 7.54822 7.54822 4.75 11 4.75C14.4518 4.75 17.25 7.54822 17.25 11C17.25 14.4518 14.4518 17.25 11 17.25C7.54822 17.25 4.75 14.4518 4.75 11Z"
+                              stroke="#14317F"
+                              stroke-width="1.5"
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                            />
+                          </svg>
                         </button>
                       </form>
                     </div>
