Додано верхню панель сайту з контактною інформацією та кнопками навігації. Оновлено обробку подій для підменю в заголовку, покращено стилі для адаптивності та візуального сприйняття.

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,32 @@
     <div class="wrapper">
       <main>
         <div class="mega-header-wrapper">
+          <div id="site-topbar" class="site-topbar">
+            <div class="site-topbar-inner wrap">
+              <div class="site-topbar-flex">
+                <div class="topbar-left">
+                  <a href="javascript:;" data-target="off-canvas-left" class="off-canvas-toggle">
+                    <span></span>
+                  </a>
+                  <div class="topbar-menu"></div>
+                </div>
+                <div class="topbar-right">
+                  <div class="topbar-text">
+                    <a href="mailto:info@auroraathome.com"><i class="fa fa-envelope"> </i>info@auroraathome.com</a>
+                    <a href="tel:2153544444">
+                      <i class="fa fa-phone" style="margin-left: 30px"></i>Philadelphia: 215-354-4444</a
+                    >
+                    <a href="tel:6103751800">
+                      <i class="fa fa-phone" style="margin-left: 30px"></i>Reading: 610-375-1800
+                    </a>
+                    <a href="tel:7172001414">
+                      <i class="fa fa-phone" style="margin-left: 30px"></i>Lancaster: 717-200-1414</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <header class="mega-header" data-js-header>
             <div class="mega-header__container">
               <a href="/" class="mega-header__logo">
@@ -97,12 +123,12 @@
                 id="menu-toggle"
                 class="mega-header__menu-trigger"
               >
-              <svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 41 41" fill="none">
-                <rect width="40" height="40" transform="translate(0.390625 0.160004)" fill="#C6D3E3"/>
-                <rect x="8.89062" y="19.66" width="23" height="1" stroke="#273272"/>
-                <rect x="8.89062" y="28.66" width="23" height="1" stroke="#273272"/>
-                <rect x="8.89062" y="10.66" width="23" height="1" stroke="#273272"/>
-              </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 41 41" fill="none">
+                  <rect width="40" height="40" transform="translate(0.390625 0.160004)" fill="#C6D3E3" />
+                  <rect x="8.89062" y="19.66" width="23" height="1" stroke="#273272" />
+                  <rect x="8.89062" y="28.66" width="23" height="1" stroke="#273272" />
+                  <rect x="8.89062" y="10.66" width="23" height="1" stroke="#273272" />
+                </svg>
               </button>
               <nav
                 id="header-overlay"
