Оновлено навігаційне меню на головній сторінці: змінено посилання на секцію "Services". Додано перевірку на сенсорні пристрої для обробки подій кліку. Покращено стилі для підменю заголовка, включаючи нові ефекти при наведенні.

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
               <nav class="mega-header__menu">
                 <ul class="mega-header__menu-list">
                   <li class="mega-header__menu-item has-submenu">
-                    <a href="/" class="mega-header__menu-link">Services</a>
+                    <a href="#services" class="mega-header__menu-link">Services</a>
                     <div class="mega-header__menu-dropdown">
                       <ul class="mega-header__menu-dropdown-list">
                         <li class="mega-header__menu-dropdown-item">
