Оновлено структуру заголовка: переписано меню з використанням SVG, видалено непотрібні елементи, покращено стилі для адаптивності та візуального сприйняття. Видалено зайві стилі з typography.scss та оновлено імпорт в index.scss.

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
     <div class="wrapper">
       <main>
         <div class="mega-header-wrapper">
-          <div id="site-topbar" class="site-topbar">
+          <!-- <div id="site-topbar" class="site-topbar">
             <div class="site-topbar-inner wrap">
               <div class="site-topbar-flex">
                 <div class="topbar-left">
@@ -34,7 +34,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <header class="mega-header" data-js-header>
             <div class="mega-header__container">
               <a href="/" class="mega-header__logo">
@@ -44,49 +44,61 @@
                 <ul class="mega-header__menu-list">
                   <li class="mega-header__menu-item has-submenu">
                     <a href="#services" class="mega-header__menu-link">Services</a>
-                    <div class="mega-header__menu-dropdown">
-                      <ul class="mega-header__menu-dropdown-list">
-                        <li class="mega-header__menu-dropdown-item">
-                          <a href="#" class="mega-header__menu-dropdown-link has-next-sibling-list">HOME HEALTH CARE</a>
-                          <ul class="mega-header__menu-dropdown-sublist">
-                            <li class="mega-header__menu-dropdown-subitem">
-                              <a href="#" class="mega-header__menu-dropdown-sublink">Specialized Home Care</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="mega-header__menu-dropdown-item">
-                          <a href="#" class="mega-header__menu-dropdown-link has-next-sibling-list">Home Care</a>
-                          <ul class="mega-header__menu-dropdown-sublist">
-                            <li class="mega-header__menu-dropdown-subitem">
-                              <a href="#" class="mega-header__menu-dropdown-sublink">Companion Care</a>
-                            </li>
-                            <li class="mega-header__menu-dropdown-subitem">
-                              <a href="#" class="mega-header__menu-dropdown-sublink">Personal Care</a>
-                            </li>
-                            <li class="mega-header__menu-dropdown-subitem">
-                              <a href="#" class="mega-header__menu-dropdown-sublink">Light Housekeeping</a>
-                            </li>
-                            <li class="mega-header__menu-dropdown-subitem">
-                              <a href="#" class="mega-header__menu-dropdown-sublink">Care Management</a>
-                            </li>
-                          </ul>
-                        </li>
-                      </ul>
-                      <ul class="mega-header__menu-dropdown-list">
-                        <li class="mega-header__menu-dropdown-item">
-                          <a href="#" class="mega-header__menu-dropdown-link">Pediatric Care</a>
-                        </li>
-                        <li class="mega-header__menu-dropdown-item">
-                          <a href="#" class="mega-header__menu-dropdown-link">VetAssist Program</a>
-                        </li>
-                        <li class="mega-header__menu-dropdown-item">
-                          <a href="#" class="mega-header__menu-dropdown-link"
-                            >Developmental Care <br />
-                            Services – ODP</a
-                          >
-                        </li>
-                      </ul>
-                    </div>
+                    <ul>
+                      <li>
+                        <a href="#">HOME HEALTH CARE</a>
+                        <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M9.75 0.75L15.25 6L9.75 11.25M15 6H0.75"
+                            stroke="currentColor"
+                            stroke-width="1.5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                        </svg>
+
+                        <ul>
+                          <li>
+                            <a href="#">Specialized Home Care</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">Home Care</a>
+                        <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M9.75 0.75L15.25 6L9.75 11.25M15 6H0.75"
+                            stroke="currentColor"
+                            stroke-width="1.5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                        </svg>
+                        <ul>
+                          <li>
+                            <a href="#">Companion Care</a>
+                          </li>
+                          <li>
+                            <a href="#">Personal Care</a>
+                          </li>
+                          <li>
+                            <a href="#">Light Housekeeping</a>
+                          </li>
+                          <li>
+                            <a href="#">Light Housekeeping</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">Pediatric Care</a>
+                      </li>
+                      <li>
+                        <a href="#">VetAssist Program</a>
+                      </li>
+                      <li>
+                        <a href="#">Developmental Care Services – ODP</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class="mega-header__menu-item"><a href="/" class="mega-header__menu-link">About Us</a></li>
                   <li class="mega-header__menu-item"><a href="/" class="mega-header__menu-link">Transfer</a></li>
@@ -98,18 +110,6 @@
                   <li class="mega-header__menu-item"><a href="/" class="mega-header__menu-link">Careers</a></li>
                   <li class="mega-header__menu-item has-submenu">
                     <a href="/" class="mega-header__menu-link">Locations</a>
-                    <div class="mega-header__menu-dropdown">
-                      <ul class="mega-header__menu-dropdown-list">
-                        <li class="mega-header__menu-dropdown-item">
-                          <a href="#" class="mega-header__menu-dropdown-link">Home Care</a>
-                        </li>
-                      </ul>
-                      <ul class="mega-header__menu-dropdown-list">
-                        <li class="mega-header__menu-dropdown-item">
-                          <a href="#" class="mega-header__menu-dropdown-link">Pediatric Care</a>
-                        </li>
-                      </ul>
-                    </div>
                   </li>
                   <li class="mega-header__menu-item"><a href="/" class="mega-header__menu-link">Contact Us</a></li>
                 </ul>
