--- a/pages/index.html
+++ b/pages/index.html
@@ -110,6 +110,61 @@
                   <li class="mega-header__menu-item"><a href="/" class="mega-header__menu-link">Careers</a></li>
                   <li class="mega-header__menu-item has-submenu">
                     <a href="/" class="mega-header__menu-link">Locations</a>
+                    <ul>
+                      <li>
+                        <a href="#">HOME HEALTH CARE</a>
+                        <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M9.75 0.75L15.25 6L9.75 11.25M15 6H0.75"
+                            stroke="currentColor"
+                            stroke-width="1.5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                        </svg>
+
+                        <ul>
+                          <li>
+                            <a href="#">Specialized Home Care</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">Home Care</a>
+                        <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path
+                            d="M9.75 0.75L15.25 6L9.75 11.25M15 6H0.75"
+                            stroke="currentColor"
+                            stroke-width="1.5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          />
+                        </svg>
+                        <ul>
+                          <li>
+                            <a href="#">Companion Care</a>
+                          </li>
+                          <li>
+                            <a href="#">Personal Care</a>
+                          </li>
+                          <li>
+                            <a href="#">Light Housekeeping</a>
+                          </li>
+                          <li>
+                            <a href="#">Light Housekeeping</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#">Pediatric Care</a>
+                      </li>
+                      <li>
+                        <a href="#">VetAssist Program</a>
+                      </li>
+                      <li>
+                        <a href="#">Developmental Care Services – ODP</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class="mega-header__menu-item"><a href="/" class="mega-header__menu-link">Contact Us</a></li>
                 </ul>
