Відновлено імпорт шрифта Rubik у header.scss та виправлено висоту header-overlay для покращення адаптивності.

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
     <div class="wrapper">
       <main>
         <div class="mega-header-wrapper">
-          <!-- <div id="site-topbar" class="site-topbar">
+          <div id="site-topbar" class="site-topbar">
             <div class="site-topbar-inner wrap">
               <div class="site-topbar-flex">
                 <div class="topbar-left">
@@ -34,7 +34,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
           <header class="mega-header" data-js-header>
             <div class="mega-header__container">
               <a href="/" class="mega-header__logo">
